--- a/style.css
+++ b/style.css
@@ -11,17 +11,32 @@
     --i-width: calc(var(--height)*0.25 - 23px);
 }
 video{
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    
+}
+@media only screen and (max-width:46.1875em){
+    video{
+       
+        position: fixed;
+        top:0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #000;
+        height: 100vh;
+    }
+   
 }
 body {
-    font-family: 'poppins';
     height: 100vh;
+    width: 100vw;
     background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     perspective: 600px;
+    overflow: hidden;
 }
 body::before {
     content: '';
@@ -207,11 +222,13 @@ body::after {
     /* margin-bottom: 40px; */
     margin-top: 10px
 }
+
 .name-job h3 {
     margin-bottom: 0.1em;
 }
 .name-job h5 {
     color: rgb(36, 219, 36);
+    line-height: 25px;
 }
 .info {
     grid-column: 2 / 4;
